<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.prototype.urbandictionary.presentation.util.ScreenStates" />

        <variable
            name="viewModel"
            type="com.prototype.urbandictionary.presentation.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mirage"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_default_bar"
                visibleOrGone="@{!viewModel.isTyping}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:src="@drawable/ic_urban_dictionary"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iv_sorting_mode"
                    sortingMode="@{viewModel.sortingMode}"
                    visibleOrGone="@{viewModel.screenState == ScreenStates.HAS_DATA}"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:onClick="@{()->viewModel.onChangeSortingModeAction()}"
                    android:padding="@dimen/_11sdp"
                    app:layout_constraintEnd_toStartOf="@id/iv_search"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    tools:src="@drawable/ic_thumbs_up_down" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:onClick="@{()->viewModel.onSearchAction()}"
                    android:padding="@dimen/_11sdp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_searching_bar"
                visibleOrGone="@{viewModel.isTyping}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:onClick="@{()->viewModel.onBackAction()}"
                    android:padding="@dimen/_11sdp"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:background="@color/bright_gray"
                    android:gravity="center_vertical|start"
                    android:hint="@string/home_search_hint"
                    android:imeOptions="actionSearch"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_25sdp"
                    android:singleLine="true"
                    android:text="@={viewModel.searchText}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/shuttle_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_back" />

                <ImageView
                    visibleIfNotEmpty="@{viewModel.searchText}"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:onClick="@{()->viewModel.onClearAction()}"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="@id/et_search"
                    app:layout_constraintEnd_toEndOf="@id/et_search"
                    app:layout_constraintTop_toTopOf="@id/et_search" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_loading_state"
            visibleOrGone="@{viewModel.screenState == ScreenStates.LOADING}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/mirage_dark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_top_bar">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_default_state"
            visibleOrGone="@{viewModel.screenState == ScreenStates.DEFAULT}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/mirage_dark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_top_bar">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/iv_blank_state_icon"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                app:layout_constraintBottom_toTopOf="@id/tv_blank_state_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_search_empty_state" />

            <TextView
                android:id="@+id/tv_blank_state_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/home_empty_state_text"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_blank_state_icon"
                app:layout_constraintVertical_chainStyle="packed" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_definitions"
            visibleOrGone="@{viewModel.screenState == ScreenStates.HAS_DATA}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/mischka"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_top_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_sorting_by"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_18sdp"
                    android:background="#EFFF00">

                    <TextView
                        android:id="@+id/tv_sorting_by"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/home_sorting_mode"
                        android:textColor="@color/mirage"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@id/tv_sorting_mode"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_sorting_mode"
                        sortingMode="@{viewModel.sortingMode}"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:gravity="center_vertical"
                        android:textColor="@color/mirage"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@id/tv_sorting_by"
                        tools:text="Normal" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_definitions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_no_results_state"
            visibleOrGone="@{viewModel.screenState == ScreenStates.NO_DATA}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_top_bar">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/iv_no_results_icon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                app:layout_constraintBottom_toTopOf="@id/tv_no_results_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_sad_face" />

            <TextView
                android:id="@+id/tv_no_results_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/home_no_results_text"
                android:textColor="@color/mirage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_no_results_icon"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>